@@ -15,6 +15,8 @@
 11. Check for plugin updates 1/2 second after connecting to server, and every
     30 minutes thereafter. Replace main menu icon with blue info icon to
     indicate updates available.
+12. Auto-scroll 'Information' dialog to plugins section if there are updates
+    available when it is opened.
 
 1.0.2
 -----
